changes to style & some functions, todos as well